chore: update dependencies and improve imports across multiple packages

--- a/packages/create-pdf/package.json
+++ b/packages/create-pdf/package.json
@@ -30,6 +30,7 @@
     "create-pdf-forge": "src/index.js"
   },
   "devDependencies": {
+    "@ahmedrowaihi/pdf-forge-components": "workspace:*",
     "nypm": "0.6.0",
     "react": "^19",
     "tsconfig": "workspace:*",
