--- a/packages/create-pdf/tsconfig.json
+++ b/packages/create-pdf/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "moduleResolution": "nodenext",
     "module": "nodenext",
+    "jsx": "react-jsx",
     "noEmit": true,
     "types": ["vitest/globals"]
   }
