--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@ahmedrowaihi/pdf-forge-components": "workspace:*",
+    "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "@types/babel__core": "7.20.5",
     "@types/babel__traverse": "7.20.7",
     "@types/mime-types": "2.1.4",
