--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.3",
-    "opentype.js": "^1.3.4",
-    "@types/opentype.js": "^1.3.4",
+    "opentype.js": "1.3.4",
+    "@types/opentype.js": "1.3.8",
     "@changesets/cli": "2.29.7",
     "@types/node": "22.14.1",
-    "@types/react": "19",
-    "@types/react-dom": "19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "happy-dom": "20.0.2",
     "pkg-pr-new": "0.0.62",
     "tsconfig": "workspace:*",
