--- a/packages/pdf-forge-printer/package.json
+++ b/packages/pdf-forge-printer/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "sharp": "^0.34.5"
   },
   "peerDependencies": {},
   "devDependencies": {
