--- a/packages/primitive/package.json
+++ b/packages/primitive/package.json
@@ -19,7 +19,22 @@
   },
   "devDependencies": {
     "tsconfig": "workspace:*",
-    "typescript": "5.9.3",
-    "tsdown": "0.15.12"
+    "tsdown": "0.15.12",
+    "typescript": "5.9.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahmedrowaihi/react-pdf-forge.git",
+    "directory": "packages/primitive"
+  },
+  "keywords": [
+    "react",
+    "pdf"
+  ],
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
