--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -9,9 +9,7 @@
   "scripts": {
     "build": "tsdown",
     "build:watch": "tsdown --watch src",
-    "clean": "rm -rf dist",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "clean": "rm -rf dist"
   },
   "license": "MIT",
   "repository": {
@@ -52,9 +50,9 @@
     "@types/babel__traverse": "7.20.7",
     "@types/mime-types": "2.1.4",
     "@types/prompts": "2.4.9",
-    "next": "^16",
-    "react": "^19",
-    "react-dom": "^19",
+    "next": "16.0.10",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "typescript": "5.8.3"
   }
 }
