--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
     "release": "turbo run build --filter=./packages/* && pnpm changeset publish",
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
-    "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm lint:fix"
+    "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm lint:fix",
+    "test:local": "tsx scripts/test-local-publish.mjs",
+    "setup:local-registry": "tsx scripts/setup-local-registry.mjs",
+    "pack:all": "pnpm build:packages && pnpm -r --filter='./packages/*' exec -- pnpm pack"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.3",
-    "opentype.js": "1.3.4",
-    "@types/opentype.js": "1.3.8",
     "@changesets/cli": "2.29.7",
     "@types/node": "22.14.1",
+    "@types/opentype.js": "1.3.8",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "happy-dom": "20.0.2",
+    "opentype.js": "1.3.4",
     "pkg-pr-new": "0.0.62",
     "tsconfig": "workspace:*",
     "tsdown": "0.15.12",
     "tsx": "4.21.0",
-    "turbo": "2.5.8",
+    "turbo": "2.7.2",
     "typescript": "5.9.3",
     "vite": "6.4.1",
     "vitest": "4.0.10"
