--- a/packages/preview-server/package.json
+++ b/packages/preview-server/package.json
@@ -6,14 +6,15 @@
     "build": "tsx ./scripts/build-preview-server.mts",
     "clean": "rm -rf dist",
     "dev": "tsx ./scripts/dev.mts",
-    "dev:seed": "tsx ./scripts/seed.mts",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "dev:seed": "tsx ./scripts/seed.mts"
   },
   "main": "./index.mjs",
   "dependencies": {
     "@ahmedrowaihi/pdf-forge-printer": "workspace:*",
-    "next": "^16"
+    "esbuild": "0.25.10",
+    "next": "16.0.10",
+    "playwright": "^1.57.0",
+    "sharp": "0.34.5"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
@@ -51,11 +52,9 @@
     "ora": "5.4.1",
     "@tailwindcss/postcss": "4.1.17",
     "postcss": "8.5.6",
-    "esbuild": "0.25.10",
     "prism-react-renderer": "2.4.1",
     "react": "^19",
     "react-dom": "^19",
-    "sharp": "0.34.4",
     "socket.io-client": "4.8.1",
     "sonner": "2.0.3",
     "source-map-js": "1.2.1",
@@ -71,6 +70,9 @@
     "type": "git",
     "url": "https://github.com/ahmedrowaihi/react-pdf-forge.git",
     "directory": "packages/preview-server"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   },
   "publishConfig": {
     "access": "public"
