--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -125,6 +125,7 @@
     "@types/html-to-text": "9.0.4",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0",
+    "@types/node": "22.14.1",
     "jsdom": "26.1.0",
     "tsconfig": "workspace:*",
     "typescript": "5.8.3"
