--- a/packages/render/tsconfig.json
+++ b/packages/render/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "tsconfig/react-library.json",
   "include": ["."],
+  "compilerOptions": {
+    "types": ["node"]
+  },
   "exclude": ["dist", "build", "node_modules"]
 }
