Squashed commit of the following:
commit 3b193cd314a570b67891ba67eea717846c4fe56e
Author: ahmedrowaihi <ahmedrowaihi1@gmail.com>
Date:   Sun Dec 28 21:31:05 2025 +0300

    feat: hono example

commit b954a084e546282508540b5efea48d61707cd54f
Author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Date:   Sun Dec 28 19:14:17 2025 +0300

    @ahmedrowaihi/pdf-forge-core@1.1.0-canary.0

    Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

commit 1ad46164df063672b680984f045b4511374bd5f3
Author: ahmedrowaihi <ahmedrowaihi1@gmail.com>
Date:   Sun Dec 28 19:08:10 2025 +0300

    support shared assets and cache registry

commit b428a787ee6083b7f37ab1db1d26ab7cddbb6e48
Author: ahmedrowaihi <ahmedrowaihi1@gmail.com>
Date:   Sun Dec 28 18:20:46 2025 +0300

    chore: enter canary mode

--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahmedrowaihi/pdf-forge-core",
-  "version": "1.0.0",
+  "version": "1.1.0-canary.0",
   "description": "Transform React components into HTML for PDF generation",
   "sideEffects": false,
   "main": "./dist/browser/index.js",
@@ -125,6 +125,7 @@
     "@types/html-to-text": "9.0.4",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0",
+    "@types/node": "22.14.1",
     "jsdom": "26.1.0",
     "tsconfig": "workspace:*",
     "typescript": "5.8.3"
