feat: All of Bun, enhance PDF rendering performance with browser pooling and update dependencies

--- a/packages/preview-server/tsconfig.json
+++ b/packages/preview-server/tsconfig.json
@@ -31,7 +31,8 @@
     "module": "esnext",
     "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["bun"]
   },
   "include": [
     "next-env.d.ts",
