--- a/packages/preview-server/package.json
+++ b/packages/preview-server/package.json
@@ -11,15 +11,17 @@
   "main": "./index.mjs",
   "dependencies": {
     "@ahmedrowaihi/pdf-forge-printer": "workspace:*",
-    "esbuild": "0.25.10",
     "next": "16.0.10",
     "playwright": "^1.57.0",
     "sharp": "0.34.5"
   },
   "devDependencies": {
-    "@babel/core": "7.26.10",
-    "@babel/parser": "7.27.0",
-    "@babel/traverse": "7.27.0",
+    "@babel/core": "7.28.5",
+    "@babel/generator": "7.28.5",
+    "@babel/parser": "7.28.5",
+    "@babel/traverse": "7.28.5",
+    "@babel/types": "7.28.5",
+    "@types/babel__generator": "7.6.8",
     "@lottiefiles/dotlottie-react": "0.13.3",
     "@radix-ui/colors": "3.0.0",
     "@radix-ui/react-collapsible": "1.1.12",
@@ -38,6 +40,7 @@
     "@types/css-tree": "2.3.10",
     "@types/fs-extra": "11.0.1",
     "@types/mime-types": "2.1.4",
+    "@types/bun": "^1.3.5",
     "@types/node": "22.14.1",
     "@types/normalize-path": "3.0.2",
     "@types/react": "^19",
@@ -72,7 +75,7 @@
     "directory": "packages/preview-server"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "bun": ">=1.0.0"
   },
   "publishConfig": {
     "access": "public"
