--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -22,7 +22,7 @@
     "pdf"
   ],
   "engines": {
-    "node": ">=20.0.0"
+    "bun": ">=1.0.0"
   },
   "dependencies": {
     "@babel/parser": "^7.27.0",
@@ -33,7 +33,6 @@
     "debounce": "^2.0.0",
     "esbuild": "^0.25.0",
     "glob": "^11.0.0",
-    "jiti": "2.4.2",
     "log-symbols": "^7.0.0",
     "mime-types": "^3.0.0",
     "normalize-path": "^3.0.0",
@@ -48,6 +47,7 @@
     "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "@types/babel__core": "7.20.5",
     "@types/babel__traverse": "7.20.7",
+    "@types/bun": "^1.3.5",
     "@types/mime-types": "2.1.4",
     "@types/prompts": "2.4.9",
     "next": "16.0.10",
