feat: All In Bun and Printer Pool

--- a/packages/preview-server/package.json
+++ b/packages/preview-server/package.json
@@ -11,17 +11,12 @@
   "main": "./index.mjs",
   "dependencies": {
     "@ahmedrowaihi/pdf-forge-printer": "workspace:*",
+    "@ahmedrowaihi/pdf-forge-toolbox": "workspace:*",
     "next": "16.0.10",
     "playwright": "^1.57.0",
     "sharp": "0.34.5"
   },
   "devDependencies": {
-    "@babel/core": "7.28.5",
-    "@babel/generator": "7.28.5",
-    "@babel/parser": "7.28.5",
-    "@babel/traverse": "7.28.5",
-    "@babel/types": "7.28.5",
-    "@types/babel__generator": "7.6.8",
     "@lottiefiles/dotlottie-react": "0.13.3",
     "@radix-ui/colors": "3.0.0",
     "@radix-ui/react-collapsible": "1.1.12",
@@ -35,8 +30,6 @@
     "@ahmedrowaihi/pdf-forge-components": "workspace:*",
     "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "lucide-react": "^0.562.0",
-    "@types/babel__core": "7.20.5",
-    "@types/babel__traverse": "7.20.7",
     "@types/css-tree": "2.3.10",
     "@types/fs-extra": "11.0.1",
     "@types/mime-types": "2.1.4",
@@ -52,7 +45,7 @@
     "log-symbols": "4.1.0",
     "module-punycode": "npm:punycode@2.3.1",
     "next-safe-action": "8.0.11",
-    "ora": "5.4.1",
+    "ora": "^8.0.0",
     "@tailwindcss/postcss": "4.1.17",
     "postcss": "8.5.6",
     "prism-react-renderer": "2.4.1",
