--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "hono",
-  "version": "1.1.0",
+  "name": "hono-example",
+  "version": "0.0.0",
+  "private": true,
   "description": "PDF Forge Hono Example - Showcase example demonstrating PDF generation and preview capabilities",
   "type": "module",
   "main": "src/index.tsx",
@@ -14,9 +15,8 @@
     "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "@ahmedrowaihi/pdf-forge-preview": "workspace:*",
     "@ahmedrowaihi/pdf-forge-printer": "workspace:*",
-    "@hono/node-server": "^1.8.0",
-    "esbuild": "0.25.10",
-    "hono": "^1.1.0",
+    "@hono/node-server": "^1.19.7",
+    "hono": "^4.11.3",
     "next": "^16.1.1",
     "playwright": "^1.57.0",
     "react": "^19.0.0",
