--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "tsx": "4.21.0",
     "turbo": "2.7.2",
     "typescript": "5.9.3",
-    "vite": "6.4.1",
-    "vitest": "4.0.10"
+    "vite": "6.4.1"
   },
   "pnpm": {
     "overrides": {
