--- a/packages/preview-server/package.json
+++ b/packages/preview-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahmedrowaihi/pdf-forge-preview",
-  "version": "1.1.0",
+  "version": "1.2.0-canary.0",
   "description": "A live preview of your PDF templates right in your browser.",
   "scripts": {
     "build": "tsx ./scripts/build-preview-server.mts",
@@ -11,15 +11,12 @@
   "main": "./index.mjs",
   "dependencies": {
     "@ahmedrowaihi/pdf-forge-printer": "workspace:*",
-    "esbuild": "0.25.10",
+    "@ahmedrowaihi/pdf-forge-toolbox": "workspace:*",
     "next": "16.0.10",
     "playwright": "^1.57.0",
     "sharp": "0.34.5"
   },
   "devDependencies": {
-    "@babel/core": "7.26.10",
-    "@babel/parser": "7.27.0",
-    "@babel/traverse": "7.27.0",
     "@lottiefiles/dotlottie-react": "0.13.3",
     "@radix-ui/colors": "3.0.0",
     "@radix-ui/react-collapsible": "1.1.12",
@@ -33,11 +30,10 @@
     "@ahmedrowaihi/pdf-forge-components": "workspace:*",
     "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "lucide-react": "^0.562.0",
-    "@types/babel__core": "7.20.5",
-    "@types/babel__traverse": "7.20.7",
     "@types/css-tree": "2.3.10",
     "@types/fs-extra": "11.0.1",
     "@types/mime-types": "2.1.4",
+    "@types/bun": "^1.3.5",
     "@types/node": "22.14.1",
     "@types/normalize-path": "3.0.2",
     "@types/react": "^19",
@@ -49,7 +45,7 @@
     "log-symbols": "4.1.0",
     "module-punycode": "npm:punycode@2.3.1",
     "next-safe-action": "8.0.11",
-    "ora": "5.4.1",
+    "ora": "^8.0.0",
     "@tailwindcss/postcss": "4.1.17",
     "postcss": "8.5.6",
     "prism-react-renderer": "2.4.1",
@@ -72,7 +68,7 @@
     "directory": "packages/preview-server"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "bun": ">=1.0.0"
   },
   "publishConfig": {
     "access": "public"
