--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahmedrowaihi/pdf-forge-cli",
-  "version": "1.1.0",
+  "version": "1.2.0-canary.0",
   "description": "A live preview of your PDF templates right in your browser.",
   "bin": {
     "pdf-dev": "./dist/index.js"
@@ -22,18 +22,15 @@
     "pdf"
   ],
   "engines": {
-    "node": ">=20.0.0"
+    "bun": ">=1.0.0"
   },
   "dependencies": {
-    "@babel/parser": "^7.27.0",
-    "@babel/traverse": "^7.27.0",
+    "@ahmedrowaihi/pdf-forge-toolbox": "workspace:*",
     "chokidar": "^4.0.3",
     "commander": "^13.0.0",
     "conf": "^15.0.2",
     "debounce": "^2.0.0",
-    "esbuild": "^0.25.0",
     "glob": "^11.0.0",
-    "jiti": "2.4.2",
     "log-symbols": "^7.0.0",
     "mime-types": "^3.0.0",
     "normalize-path": "^3.0.0",
@@ -46,10 +43,10 @@
   "devDependencies": {
     "@ahmedrowaihi/pdf-forge-components": "workspace:*",
     "@ahmedrowaihi/pdf-forge-core": "workspace:*",
-    "@types/babel__core": "7.20.5",
-    "@types/babel__traverse": "7.20.7",
+    "@types/bun": "^1.3.5",
     "@types/mime-types": "2.1.4",
     "@types/prompts": "2.4.9",
+    "@types/normalize-path": "3.0.2",
     "next": "16.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
