--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -17,17 +17,16 @@
     "@ahmedrowaihi/pdf-forge-printer": "workspace:*",
     "@hono/node-server": "^1.19.7",
     "hono": "^4.11.3",
-    "next": "^16.1.1",
-    "playwright": "^1.57.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "16.0.10",
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.9.0"
+    "@types/node": "22.14.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=20.0.0"
