--- a/package.json
+++ b/package.json
@@ -13,17 +13,15 @@
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
     "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm lint:fix",
-    "test:local": "tsx scripts/test-local-publish.mjs",
-    "setup:local-registry": "tsx scripts/setup-local-registry.mjs",
-    "pack:all": "pnpm build:packages && pnpm -r --filter='./packages/*' exec -- pnpm pack"
+    "pack:all": "pnpm build:packages && pnpm -r --filter='./packages/*' exec -- pnpm pack",
+    "manypkg": "manypkg"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.3",
     "@changesets/cli": "2.29.7",
+    "@manypkg/cli": "0.25.1",
     "@types/node": "22.14.1",
     "@types/opentype.js": "1.3.8",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
     "happy-dom": "20.0.2",
     "opentype.js": "1.3.4",
     "pkg-pr-new": "0.0.62",
