--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -33,6 +33,7 @@
     "react": "^18.0 || ^19.0"
   },
   "devDependencies": {
+    "react": "^19",
     "tsconfig": "workspace:*",
     "typescript": "5.9.3"
   },
