--- a/packages/preview-server/package.json
+++ b/packages/preview-server/package.json
@@ -14,9 +14,11 @@
     "@ahmedrowaihi/pdf-forge-toolbox": "workspace:*",
     "next": "16.0.10",
     "playwright": "^1.57.0",
-    "sharp": "0.34.5"
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@ahmedrowaihi/pdf-forge-components": "workspace:*",
+    "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "@lottiefiles/dotlottie-react": "0.13.3",
     "@radix-ui/colors": "3.0.0",
     "@radix-ui/react-collapsible": "1.1.12",
@@ -27,13 +29,11 @@
     "@radix-ui/react-toggle": "1.1.10",
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
-    "@ahmedrowaihi/pdf-forge-components": "workspace:*",
-    "@ahmedrowaihi/pdf-forge-core": "workspace:*",
-    "lucide-react": "^0.562.0",
+    "@tailwindcss/postcss": "4.1.17",
+    "@types/bun": "^1.3.5",
     "@types/css-tree": "2.3.10",
     "@types/fs-extra": "11.0.1",
     "@types/mime-types": "2.1.4",
-    "@types/bun": "^1.3.5",
     "@types/node": "22.14.1",
     "@types/normalize-path": "3.0.2",
     "@types/react": "^19",
@@ -42,11 +42,11 @@
     "clsx": "2.1.1",
     "colorjs.io": "0.5.2",
     "framer-motion": "12.23.22",
-    "log-symbols": "4.1.0",
+    "log-symbols": "^7.0.0",
+    "lucide-react": "^0.562.0",
     "module-punycode": "npm:punycode@2.3.1",
     "next-safe-action": "8.0.11",
     "ora": "^8.0.0",
-    "@tailwindcss/postcss": "4.1.17",
     "postcss": "8.5.6",
     "prism-react-renderer": "2.4.1",
     "react": "^19",
@@ -57,7 +57,7 @@
     "stacktrace-parser": "0.1.11",
     "tailwind-merge": "3.2.0",
     "tailwindcss": "4.1.17",
-    "typescript": "5.8.3",
+    "typescript": "5.9.3",
     "use-debounce": "10.0.4",
     "zod": "4.1.12"
   },
