--- a/packages/primitive/package.json
+++ b/packages/primitive/package.json
@@ -18,6 +18,7 @@
     "react": "^18.0 || ^19.0"
   },
   "devDependencies": {
+    "react": "^19",
     "tsconfig": "workspace:*",
     "tsdown": "0.15.12",
     "typescript": "5.9.3"
