--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -45,11 +45,11 @@
     "@ahmedrowaihi/pdf-forge-core": "workspace:*",
     "@types/bun": "^1.3.5",
     "@types/mime-types": "2.1.4",
-    "@types/prompts": "2.4.9",
     "@types/normalize-path": "3.0.2",
+    "@types/prompts": "2.4.9",
     "next": "16.0.10",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "typescript": "5.8.3"
+    "react": "^19",
+    "react-dom": "^19",
+    "typescript": "5.9.3"
   }
 }
