--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -123,12 +123,14 @@
   "devDependencies": {
     "@edge-runtime/vm": "5.0.0",
     "@types/html-to-text": "9.0.4",
+    "@types/node": "22.14.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0",
-    "@types/node": "22.14.1",
     "jsdom": "26.1.0",
+    "react": "^19",
+    "react-dom": "^19",
     "tsconfig": "workspace:*",
-    "typescript": "5.8.3"
+    "typescript": "5.9.3"
   },
   "publishConfig": {
     "access": "public"
