--- a/packages/toolbox/package.json
+++ b/packages/toolbox/package.json
@@ -43,12 +43,12 @@
     "tsconfig-paths": "4.2.0"
   },
   "devDependencies": {
-    "@types/babel__generator": "7.6.8",
     "@types/babel__core": "7.20.5",
+    "@types/babel__generator": "7.6.8",
     "@types/babel__traverse": "7.20.7",
     "@types/bun": "^1.3.5",
     "@types/chokidar": "^1.7.5",
-    "@types/node": "^22.14.1",
+    "@types/node": "22.14.1",
     "chokidar": "^4.0.3",
     "tsdown": "0.15.12",
     "typescript": "5.9.3"
