--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ahmedrowaihi/pdf-forge-toolbox",
+  "name": "@ahmedrowaihi/pdf-forge-assets",
   "version": "1.2.0-canary.2",
-  "description": "Shared utilities and tools for PDF Forge packages",
+  "description": "Asset transformation and dependency graph utilities for PDF Forge",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -16,31 +16,30 @@
     }
   },
   "scripts": {
-    "build": "tsdown src/index.ts src/transform-assets-to-imports.ts src/hot-reload-change.ts src/get-imported-modules.ts src/resolve-path-aliases.ts src/create-dependency-graph.ts src/get-templates-directory-metadata.ts src/style-text.ts src/register-spinner-autostopping.ts src/escape-string-for-regex.ts --format cjs,esm --dts",
+    "build": "tsdown src/index.ts src/transform-assets-to-imports.ts src/create-dependency-graph.ts src/get-imported-modules.ts --format cjs,esm --dts",
     "clean": "rm -rf dist"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahmedrowaihi/react-pdf-forge.git",
-    "directory": "packages/toolbox"
+    "url": "https://github.com/ahmedrowaihi/react-pdf-forge-monorepo.git",
+    "directory": "packages/assets"
   },
   "keywords": [
     "react",
     "pdf",
+    "assets",
     "utilities"
   ],
   "engines": {
     "bun": ">=1.0.0"
   },
   "dependencies": {
+    "@ahmedrowaihi/pdf-forge-dev-tools": "workspace:*",
     "@babel/generator": "^7.28.5",
     "@babel/parser": "^7.28.5",
     "@babel/traverse": "^7.28.5",
-    "@babel/types": "^7.28.5",
-    "log-symbols": "^7.0.0",
-    "ora": "^8.0.0",
-    "tsconfig-paths": "4.2.0"
+    "@babel/types": "^7.28.5"
   },
   "devDependencies": {
     "@types/babel__core": "7.20.5",
